modules/security/kyverno/resources/Service--kyverno-svc-metrics.yaml
---
# Source: kyverno/charts/kyverno/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-svc-metrics
  labels:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/version: "v1.7.1"
    app: kyverno
spec:
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: metrics-port
  selector:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/instance: kyverno
    app: kyverno
  type: ClusterIP
