modules/security/kyverno/resources/Service--kyverno-svc.yaml
---
# Source: kyverno/charts/kyverno/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-svc
  labels:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/instance: kyverno
    app.kubernetes.io/version: "v1.7.1"
    app: kyverno
spec:
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: kyverno
    app.kubernetes.io/instance: kyverno
    app: kyverno
  type: ClusterIP
